k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: market
  labels:
    name: market
    environment: production
    managed-by: kubectl
